Proxy messaging will now only be enabled if the config option is enabled in databases. Invalid proxy messages from a player will now kick them instead of spamming to the console.